_build/default/src/lib/parser.automaton
State 0:
program' -> . program [ # ]
-- On WHILE shift to state 1
-- On MINUS shift to state 2
-- On LPAREN shift to state 3
-- On LOGIC shift to state 4
-- On LET shift to state 5
-- On INTEGER shift to state 11
-- On IF shift to state 12
-- On ID shift to state 13
-- On BREAK shift to state 15
-- On var shift to state 16
-- On program shift to state 107
-- On exp shift to state 108

State 1:
exp -> WHILE . exp DO exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
-- On WHILE shift to state 1
-- On MINUS shift to state 2
-- On LPAREN shift to state 3
-- On LOGIC shift to state 4
-- On LET shift to state 5
-- On INTEGER shift to state 11
-- On IF shift to state 12
-- On ID shift to state 13
-- On BREAK shift to state 15
-- On var shift to state 16
-- On exp shift to state 104

State 2:
exp -> MINUS . exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
-- On WHILE shift to state 1
-- On MINUS shift to state 2
-- On LPAREN shift to state 3
-- On LOGIC shift to state 4
-- On LET shift to state 5
-- On INTEGER shift to state 11
-- On IF shift to state 12
-- On ID shift to state 13
-- On BREAK shift to state 15
-- On var shift to state 16
-- On exp shift to state 103

State 3:
exp -> LPAREN . loption(separated_nonempty_list(SEMI,exp)) RPAREN [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
-- On WHILE shift to state 1
-- On MINUS shift to state 2
-- On LPAREN shift to state 3
-- On LOGIC shift to state 4
-- On LET shift to state 5
-- On INTEGER shift to state 11
-- On IF shift to state 12
-- On ID shift to state 13
-- On BREAK shift to state 15
-- On var shift to state 16
-- On separated_nonempty_list(SEMI,exp) shift to state 97
-- On loption(separated_nonempty_list(SEMI,exp)) shift to state 98
-- On exp shift to state 100
-- On RPAREN reduce production loption(separated_nonempty_list(SEMI,exp)) -> 

State 4:
exp -> LOGIC . [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
-- On VAR reduce production exp -> LOGIC 
-- On TYPE reduce production exp -> LOGIC 
-- On TIMES reduce production exp -> LOGIC 
-- On THEN reduce production exp -> LOGIC 
-- On SEMI reduce production exp -> LOGIC 
-- On RPAREN reduce production exp -> LOGIC 
-- On POW reduce production exp -> LOGIC 
-- On PLUS reduce production exp -> LOGIC 
-- On OR reduce production exp -> LOGIC 
-- On NE reduce production exp -> LOGIC 
-- On MOD reduce production exp -> LOGIC 
-- On MINUS reduce production exp -> LOGIC 
-- On LT reduce production exp -> LOGIC 
-- On LE reduce production exp -> LOGIC 
-- On IN reduce production exp -> LOGIC 
-- On GT reduce production exp -> LOGIC 
-- On GE reduce production exp -> LOGIC 
-- On FUNCTION reduce production exp -> LOGIC 
-- On EQ reduce production exp -> LOGIC 
-- On EOF reduce production exp -> LOGIC 
-- On ELSE reduce production exp -> LOGIC 
-- On DO reduce production exp -> LOGIC 
-- On DIV reduce production exp -> LOGIC 
-- On COMMA reduce production exp -> LOGIC 
-- On AND reduce production exp -> LOGIC 

State 5:
exp -> LET . decs IN exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
-- On VAR shift to state 6
-- On TYPE shift to state 61
-- On FUNCTION shift to state 66
-- On vardec shift to state 84
-- On typedec shift to state 85
-- On nonempty_list(typedec) shift to state 87
-- On nonempty_list(funcdec) shift to state 88
-- On list(dec) shift to state 89
-- On funcdec shift to state 90
-- On decs shift to state 92
-- On dec shift to state 95
-- On IN reduce production list(dec) -> 

State 6:
vardec -> VAR . ID COLON ID ASSIGN exp [ VAR TYPE IN FUNCTION ]
vardec -> VAR . ID ASSIGN exp [ VAR TYPE IN FUNCTION ]
-- On ID shift to state 7

State 7:
vardec -> VAR ID . COLON ID ASSIGN exp [ VAR TYPE IN FUNCTION ]
vardec -> VAR ID . ASSIGN exp [ VAR TYPE IN FUNCTION ]
-- On COLON shift to state 8
-- On ASSIGN shift to state 59

State 8:
vardec -> VAR ID COLON . ID ASSIGN exp [ VAR TYPE IN FUNCTION ]
-- On ID shift to state 9

State 9:
vardec -> VAR ID COLON ID . ASSIGN exp [ VAR TYPE IN FUNCTION ]
-- On ASSIGN shift to state 10

State 10:
vardec -> VAR ID COLON ID ASSIGN . exp [ VAR TYPE IN FUNCTION ]
-- On WHILE shift to state 1
-- On MINUS shift to state 2
-- On LPAREN shift to state 3
-- On LOGIC shift to state 4
-- On LET shift to state 5
-- On INTEGER shift to state 11
-- On IF shift to state 12
-- On ID shift to state 13
-- On BREAK shift to state 15
-- On var shift to state 16
-- On exp shift to state 58

State 11:
exp -> INTEGER . [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
-- On VAR reduce production exp -> INTEGER 
-- On TYPE reduce production exp -> INTEGER 
-- On TIMES reduce production exp -> INTEGER 
-- On THEN reduce production exp -> INTEGER 
-- On SEMI reduce production exp -> INTEGER 
-- On RPAREN reduce production exp -> INTEGER 
-- On POW reduce production exp -> INTEGER 
-- On PLUS reduce production exp -> INTEGER 
-- On OR reduce production exp -> INTEGER 
-- On NE reduce production exp -> INTEGER 
-- On MOD reduce production exp -> INTEGER 
-- On MINUS reduce production exp -> INTEGER 
-- On LT reduce production exp -> INTEGER 
-- On LE reduce production exp -> INTEGER 
-- On IN reduce production exp -> INTEGER 
-- On GT reduce production exp -> INTEGER 
-- On GE reduce production exp -> INTEGER 
-- On FUNCTION reduce production exp -> INTEGER 
-- On EQ reduce production exp -> INTEGER 
-- On EOF reduce production exp -> INTEGER 
-- On ELSE reduce production exp -> INTEGER 
-- On DO reduce production exp -> INTEGER 
-- On DIV reduce production exp -> INTEGER 
-- On COMMA reduce production exp -> INTEGER 
-- On AND reduce production exp -> INTEGER 

State 12:
exp -> IF . exp THEN exp ELSE exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> IF . exp THEN exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
-- On WHILE shift to state 1
-- On MINUS shift to state 2
-- On LPAREN shift to state 3
-- On LOGIC shift to state 4
-- On LET shift to state 5
-- On INTEGER shift to state 11
-- On IF shift to state 12
-- On ID shift to state 13
-- On BREAK shift to state 15
-- On var shift to state 16
-- On exp shift to state 53

State 13:
exp -> ID . LPAREN loption(separated_nonempty_list(COMMA,exp)) RPAREN [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
var -> ID . [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA ASSIGN AND ]
-- On LPAREN shift to state 14
-- On VAR reduce production var -> ID 
-- On TYPE reduce production var -> ID 
-- On TIMES reduce production var -> ID 
-- On THEN reduce production var -> ID 
-- On SEMI reduce production var -> ID 
-- On RPAREN reduce production var -> ID 
-- On POW reduce production var -> ID 
-- On PLUS reduce production var -> ID 
-- On OR reduce production var -> ID 
-- On NE reduce production var -> ID 
-- On MOD reduce production var -> ID 
-- On MINUS reduce production var -> ID 
-- On LT reduce production var -> ID 
-- On LE reduce production var -> ID 
-- On IN reduce production var -> ID 
-- On GT reduce production var -> ID 
-- On GE reduce production var -> ID 
-- On FUNCTION reduce production var -> ID 
-- On EQ reduce production var -> ID 
-- On EOF reduce production var -> ID 
-- On ELSE reduce production var -> ID 
-- On DO reduce production var -> ID 
-- On DIV reduce production var -> ID 
-- On COMMA reduce production var -> ID 
-- On ASSIGN reduce production var -> ID 
-- On AND reduce production var -> ID 

State 14:
exp -> ID LPAREN . loption(separated_nonempty_list(COMMA,exp)) RPAREN [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
-- On WHILE shift to state 1
-- On MINUS shift to state 2
-- On LPAREN shift to state 3
-- On LOGIC shift to state 4
-- On LET shift to state 5
-- On INTEGER shift to state 11
-- On IF shift to state 12
-- On ID shift to state 13
-- On BREAK shift to state 15
-- On var shift to state 16
-- On separated_nonempty_list(COMMA,exp) shift to state 47
-- On loption(separated_nonempty_list(COMMA,exp)) shift to state 48
-- On exp shift to state 50
-- On RPAREN reduce production loption(separated_nonempty_list(COMMA,exp)) -> 

State 15:
exp -> BREAK . [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
-- On VAR reduce production exp -> BREAK 
-- On TYPE reduce production exp -> BREAK 
-- On TIMES reduce production exp -> BREAK 
-- On THEN reduce production exp -> BREAK 
-- On SEMI reduce production exp -> BREAK 
-- On RPAREN reduce production exp -> BREAK 
-- On POW reduce production exp -> BREAK 
-- On PLUS reduce production exp -> BREAK 
-- On OR reduce production exp -> BREAK 
-- On NE reduce production exp -> BREAK 
-- On MOD reduce production exp -> BREAK 
-- On MINUS reduce production exp -> BREAK 
-- On LT reduce production exp -> BREAK 
-- On LE reduce production exp -> BREAK 
-- On IN reduce production exp -> BREAK 
-- On GT reduce production exp -> BREAK 
-- On GE reduce production exp -> BREAK 
-- On FUNCTION reduce production exp -> BREAK 
-- On EQ reduce production exp -> BREAK 
-- On EOF reduce production exp -> BREAK 
-- On ELSE reduce production exp -> BREAK 
-- On DO reduce production exp -> BREAK 
-- On DIV reduce production exp -> BREAK 
-- On COMMA reduce production exp -> BREAK 
-- On AND reduce production exp -> BREAK 

State 16:
exp -> var . [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> var . ASSIGN exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
-- On ASSIGN shift to state 17
-- On VAR reduce production exp -> var 
-- On TYPE reduce production exp -> var 
-- On TIMES reduce production exp -> var 
-- On THEN reduce production exp -> var 
-- On SEMI reduce production exp -> var 
-- On RPAREN reduce production exp -> var 
-- On POW reduce production exp -> var 
-- On PLUS reduce production exp -> var 
-- On OR reduce production exp -> var 
-- On NE reduce production exp -> var 
-- On MOD reduce production exp -> var 
-- On MINUS reduce production exp -> var 
-- On LT reduce production exp -> var 
-- On LE reduce production exp -> var 
-- On IN reduce production exp -> var 
-- On GT reduce production exp -> var 
-- On GE reduce production exp -> var 
-- On FUNCTION reduce production exp -> var 
-- On EQ reduce production exp -> var 
-- On EOF reduce production exp -> var 
-- On ELSE reduce production exp -> var 
-- On DO reduce production exp -> var 
-- On DIV reduce production exp -> var 
-- On COMMA reduce production exp -> var 
-- On AND reduce production exp -> var 

State 17:
exp -> var ASSIGN . exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
-- On WHILE shift to state 1
-- On MINUS shift to state 2
-- On LPAREN shift to state 3
-- On LOGIC shift to state 4
-- On LET shift to state 5
-- On INTEGER shift to state 11
-- On IF shift to state 12
-- On ID shift to state 13
-- On BREAK shift to state 15
-- On var shift to state 16
-- On exp shift to state 18

State 18:
exp -> exp . PLUS exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . MINUS exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . TIMES exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . DIV exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . MOD exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . POW exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . EQ exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . NE exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . GT exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . GE exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . LT exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . LE exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . AND exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . OR exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> var ASSIGN exp . [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
-- On TIMES shift to state 19
-- On POW shift to state 21
-- On PLUS shift to state 23
-- On OR shift to state 29
-- On NE shift to state 31
-- On MOD shift to state 25
-- On MINUS shift to state 33
-- On LT shift to state 35
-- On LE shift to state 37
-- On GT shift to state 39
-- On GE shift to state 41
-- On EQ shift to state 43
-- On DIV shift to state 27
-- On AND shift to state 45
-- On VAR reduce production exp -> var ASSIGN exp 
-- On TYPE reduce production exp -> var ASSIGN exp 
-- On THEN reduce production exp -> var ASSIGN exp 
-- On SEMI reduce production exp -> var ASSIGN exp 
-- On RPAREN reduce production exp -> var ASSIGN exp 
-- On IN reduce production exp -> var ASSIGN exp 
-- On FUNCTION reduce production exp -> var ASSIGN exp 
-- On EOF reduce production exp -> var ASSIGN exp 
-- On ELSE reduce production exp -> var ASSIGN exp 
-- On DO reduce production exp -> var ASSIGN exp 
-- On COMMA reduce production exp -> var ASSIGN exp 

State 19:
exp -> exp TIMES . exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
-- On WHILE shift to state 1
-- On MINUS shift to state 2
-- On LPAREN shift to state 3
-- On LOGIC shift to state 4
-- On LET shift to state 5
-- On INTEGER shift to state 11
-- On IF shift to state 12
-- On ID shift to state 13
-- On BREAK shift to state 15
-- On var shift to state 16
-- On exp shift to state 20

State 20:
exp -> exp . PLUS exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . MINUS exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . TIMES exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp TIMES exp . [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . DIV exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . MOD exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . POW exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . EQ exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . NE exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . GT exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . GE exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . LT exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . LE exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . AND exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . OR exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
-- On POW shift to state 21
-- On VAR reduce production exp -> exp TIMES exp 
-- On TYPE reduce production exp -> exp TIMES exp 
-- On TIMES reduce production exp -> exp TIMES exp 
-- On THEN reduce production exp -> exp TIMES exp 
-- On SEMI reduce production exp -> exp TIMES exp 
-- On RPAREN reduce production exp -> exp TIMES exp 
-- On PLUS reduce production exp -> exp TIMES exp 
-- On OR reduce production exp -> exp TIMES exp 
-- On NE reduce production exp -> exp TIMES exp 
-- On MOD reduce production exp -> exp TIMES exp 
-- On MINUS reduce production exp -> exp TIMES exp 
-- On LT reduce production exp -> exp TIMES exp 
-- On LE reduce production exp -> exp TIMES exp 
-- On IN reduce production exp -> exp TIMES exp 
-- On GT reduce production exp -> exp TIMES exp 
-- On GE reduce production exp -> exp TIMES exp 
-- On FUNCTION reduce production exp -> exp TIMES exp 
-- On EQ reduce production exp -> exp TIMES exp 
-- On EOF reduce production exp -> exp TIMES exp 
-- On ELSE reduce production exp -> exp TIMES exp 
-- On DO reduce production exp -> exp TIMES exp 
-- On DIV reduce production exp -> exp TIMES exp 
-- On COMMA reduce production exp -> exp TIMES exp 
-- On AND reduce production exp -> exp TIMES exp 

State 21:
exp -> exp POW . exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
-- On WHILE shift to state 1
-- On MINUS shift to state 2
-- On LPAREN shift to state 3
-- On LOGIC shift to state 4
-- On LET shift to state 5
-- On INTEGER shift to state 11
-- On IF shift to state 12
-- On ID shift to state 13
-- On BREAK shift to state 15
-- On var shift to state 16
-- On exp shift to state 22

State 22:
exp -> exp . PLUS exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . MINUS exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . TIMES exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . DIV exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . MOD exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . POW exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp POW exp . [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . EQ exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . NE exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . GT exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . GE exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . LT exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . LE exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . AND exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
exp -> exp . OR exp [ VAR TYPE TIMES THEN SEMI RPAREN POW PLUS OR NE MOD MINUS LT LE IN GT GE FUNCTION EQ EOF ELSE DO DIV COMMA AND ]
-- On POW shift to state 21
-- On VAR reduce production exp -> exp POW exp 
-- On TYPE reduce production exp -> exp POW exp 
-- On TIMES reduce production exp -> exp POW exp 
-- On THEN reduce production exp -> exp POW exp 
-- On SEMI reduce production exp -> exp POW exp 
-- On RPAREN reduce production exp -> exp POW exp 
-- On PLUS reduce production exp -> exp POW exp 
-- On OR reduce production exp -> exp POW exp 
-- On NE reduce production exp -> exp POW exp 
-- On MOD reduce production exp -> exp POW exp 
-- On MINUS reduce production exp -> exp POW exp 
-- On LT reduce production exp -> exp POW exp 
-- On LE reduce production exp -> exp POW exp 
-- On IN reduce production exp -> exp POW exp 
-- On GT reduce production exp -> exp POW exp 
-- On GE reduce production exp -> exp POW exp 
-- On FUNCTION reduce production exp -> exp POW exp 
-- On EQ reduce production exp -> exp POW exp 
-- On EOF reduce production exp -> exp POW exp 
-- On ELSE reduce production exp -> exp POW exp 
-- On DO reduce production exp -> exp POW exp 
-- On DIV reduce production exp -> exp POW exp 
-- On COMMA reduce production exp -> exp POW exp 
-- On AND reduce production exp -> exp POW exp 
